--- a/style.css
+++ b/style.css
@@ -13,19 +13,6 @@ hr {
     margin: 16px auto;
 }
 
-.color {
-    width: 18%;
-    height: 10%;
-    padding: 8px 16px;
-    margin: 8px 16px;
-    border-radius: 8px;
-}
-
-/* Centers the content box text */
-.description {
-    text-align: center;
-}
-
 /* Styles the sections */
 section {
     border: 2px solid gray;
@@ -41,21 +28,27 @@ div.selection-box {
     justify-content: space-between;
 }
 
+/* content-bpx styling */
+.content-box {
+    width: 18%;
+    height: 10%;
+    padding: 8px 16px;
+    margin: 8px 16px;
+    border-radius: 8px;
+}
+
+/* Centers the text in the content box */
+.content-box p {
+    text-align: center;
+}
+
 /* Colors the color palette */
 div.yellow {
     background-color: rgb(255, 255, 195);
 }
 
-div.brown {
+div.brown, div.dark, div.purple {
     background-color: rgb(82, 50, 50);
-}
-
-div.dark {
-    background-color: rgb(46, 46, 46);
-}
-
-div.purple {
-    background-color: rgb(133, 10, 133);
 }
 
 /* Colors the color palette text */
