--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Import font styles */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Roboto:wght@300&display=swap');
+
 h1, h2 {
     text-align: center;
     color: rgb(82, 50, 50);
@@ -58,4 +61,14 @@ div.yellow p {
 
 div.brown p, div.dark p, div.purple p {
     color: rgb(255, 255, 195);
+}
+
+/* Font styles */
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Cormorant Garamond', serif;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
 }
